--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "code-oss-dev",
-  "version": "1.54.0",
+  "version": "1.54.0-datalore",
   "distro": "1ba8297fd1677135b1a04c508b9c31d33b673fef",
   "author": {
     "name": "Microsoft Corporation"
