--- a/package.json
+++ b/package.json
@@ -92,6 +92,7 @@
   },
   "devDependencies": {
     "7zip": "0.0.6",
+    "@gitpod/gitpod-protocol": "^0.1.5-ak-fix-code.7",
     "@types/applicationinsights": "0.20.0",
     "@types/chokidar": "2.1.3",
     "@types/cookie": "^0.3.3",
