--- a/package.json
+++ b/package.json
@@ -59,7 +59,7 @@
     "extensions-ci": "node --max_old_space_size=4095 ./node_modules/gulp/bin/gulp.js extensions-ci"
   },
   "dependencies": {
-    "@gitpod/supervisor-api-grpc": "ak-remote-terminal-channel",
+    "@gitpod/supervisor-api-grpc": "master",
     "@grpc/grpc-js": "latest",
     "applicationinsights": "1.0.8",
     "chokidar": "3.5.1",
@@ -94,7 +94,7 @@
   },
   "devDependencies": {
     "7zip": "0.0.6",
-    "@gitpod/gitpod-protocol": "^0.1.5-ak-fix-code.7",
+    "@gitpod/gitpod-protocol": "master",
     "@types/applicationinsights": "0.20.0",
     "@types/chokidar": "2.1.3",
     "@types/cookie": "^0.3.3",
