--- a/remote/package.json
+++ b/remote/package.json
@@ -32,6 +32,6 @@
   "optionalDependencies": {
     "vscode-windows-ca-certs": "0.3.0",
     "vscode-windows-registry": "1.0.2",
-    "windows-process-tree": "^0.2.4"
+    "windows-process-tree": "0.2.4"
   }
 }
