Hide scripts by regular expression

--- a/extensions/npm/package.json
+++ b/extensions/npm/package.json
@@ -280,7 +280,12 @@
           "tags": [
             "usesOnlineServices"
           ]
-        }
+        },
+				"npm.excludeScripts": {
+					"type": "string",
+					"description": "%config.npm.excludeScripts%",
+					"default": "^\\..*"
+				}
       }
     },
     "jsonValidation": [
