Adding a language ID for CUDA

--- a/extensions/cpp/package.json
+++ b/extensions/cpp/package.json
@@ -50,6 +50,13 @@
           "cpp"
         ],
         "configuration": "./language-configuration.json"
+      },
+      {
+        "id": "cuda-cpp",
+        "extensions": [
+          ".cu",
+          ".cuh"
+        ]
       }
     ],
     "grammars": [
