Adding aliases for CUDA C++

--- a/extensions/cpp/package.json
+++ b/extensions/cpp/package.json
@@ -56,6 +56,9 @@
         "extensions": [
           ".cu",
           ".cuh"
+        ],
+        "aliases": [
+          "CUDA C++"
         ]
       }
     ],
