Adding a language configuration file for cuda-cpp

--- a/extensions/cpp/package.json
+++ b/extensions/cpp/package.json
@@ -59,7 +59,8 @@
         ],
         "aliases": [
           "CUDA C++"
-        ]
+        ],
+        "configuration": "./language-configuration.json"
       }
     ],
     "grammars": [
