--- a/package.json
+++ b/package.json
@@ -73,7 +73,7 @@
     "native-keymap": "2.2.1",
     "native-watchdog": "1.3.0",
     "node-pty": "0.10.0-beta19",
-    "nsfw": "^2.1.1",
+    "nsfw": "2.1.2",
     "spdlog": "^0.11.1",
     "sudo-prompt": "9.2.1",
     "tas-client-umd": "0.1.4",
