--- a/remote/package.json
+++ b/remote/package.json
@@ -14,7 +14,7 @@
     "minimist": "^1.2.5",
     "native-watchdog": "1.3.0",
     "node-pty": "0.10.0-beta19",
-    "nsfw": "^2.1.1",
+    "nsfw": "2.1.2",
     "spdlog": "^0.11.1",
     "tas-client-umd": "0.1.4",
     "vscode-oniguruma": "1.3.1",
