--- a/extensions/merge-conflict/package.json
+++ b/extensions/merge-conflict/package.json
@@ -70,13 +70,15 @@
         "category": "%command.category%",
         "title": "%command.next%",
         "original": "Next Conflict",
-        "command": "merge-conflict.next"
+        "command": "merge-conflict.next",
+        "icon": "$(codicon/arrow-down)"
       },
       {
         "category": "%command.category%",
         "title": "%command.previous%",
         "original": "Previous Conflict",
-        "command": "merge-conflict.previous"
+        "command": "merge-conflict.previous",
+        "icon": "$(codicon/arrow-up)"
       },
       {
         "category": "%command.category%",
@@ -96,6 +98,18 @@
           "command": "merge-conflict.accept.all-incoming",
           "when": "scmProvider == git && scmResourceGroup == merge",
           "group": "1_modification"
+        }
+      ],
+      "editor/title": [
+        {
+          "command": "merge-conflict.previous",
+          "group": "navigation",
+          "when": "mergeConflictsCount && mergeConflictsCount != 0"
+        },
+        {
+          "command": "merge-conflict.next",
+          "group": "navigation",
+          "when": "mergeConflictsCount && mergeConflictsCount != 0"
         }
       ]
     },
