Improve descriptions, fixes #117516, fixes #117518

--- a/extensions/emmet/package.json
+++ b/extensions/emmet/package.json
@@ -86,7 +86,8 @@
         "emmet.extensionsPath": {
           "type": "array",
           "items": {
-            "type": "string"
+            "type": "string",
+            "description": "%emmetExtensionsPathItem%"
           },
           "default": [],
           "description": "%emmetExtensionsPath%"
