--- a/.github/workflows/no-yarn-lock-changes.yml
+++ b/.github/workflows/no-yarn-lock-changes.yml
@@ -6,9 +6,30 @@ jobs:
     name: Prevent yarn.lock changes in PRs
     runs-on: ubuntu-latest
     steps:
-      - id: file_changes
-        uses: trilom/file-changes-action@ce38c8ce2459ca3c303415eec8cb0409857b4272
-      - name: Check for yarn.lock changes
+      # - uses: octokit/request-action@v2.x
+      #   id: get_pr_info
+      #   with:
+      #     route: GET /repos/{owner}/{repo}/collaborators/{username}/permission
+      #     owner: octokit
+      #     repo: request-action
+      #     username:
+      #   env:
+      #     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      # - uses: octokit/request-action@v2.x
+      #   id: get_permissions
+      #   with:
+      #     route: GET /repos/{owner}/{repo}/collaborators/{username}/permission
+      #     owner: octokit
+      #     repo: request-action
+      #     username:
+      #   env:
+      #     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      # - id: file_changes
+      #   uses: trilom/file-changes-action@ce38c8ce2459ca3c303415eec8cb0409857b4272
+      # - name: Check for yarn.lock changes
+      #   run: |
+      #     cat $HOME/files.json | jq -e '.[] | test("yarn\\.lock$") | not' \
+      #       || (echo "Changes to yarn.lock files aren't allowed in PRs." && exit 1)
+      - name: debug
         run: |
-          cat $HOME/files.json | jq -e '.[] | test("yarn\\.lock$") | not' \
-            || (echo "Changes to yarn.lock files aren't allowed in PRs." && exit 1)
+          cat ${{ github.event.pull_request.user.login }}
