--- a/.github/workflows/no-yarn-lock-changes.yml
+++ b/.github/workflows/no-yarn-lock-changes.yml
@@ -6,15 +6,6 @@ jobs:
     name: Prevent yarn.lock changes in PRs
     runs-on: ubuntu-latest
     steps:
-      # - uses: octokit/request-action@v2.x
-      #   id: get_pr_info
-      #   with:
-      #     route: GET /repos/{owner}/{repo}/collaborators/{username}/permission
-      #     owner: octokit
-      #     repo: request-action
-      #     username:
-      #   env:
-      #     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       - uses: octokit/request-action@v2.x
         id: get_permissions
         with:
@@ -22,12 +13,11 @@ jobs:
           username: ${{ github.event.pull_request.user.login }}
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      # - id: file_changes
-      #   uses: trilom/file-changes-action@ce38c8ce2459ca3c303415eec8cb0409857b4272
-      # - name: Check for yarn.lock changes
-      #   run: |
-      #     cat $HOME/files.json | jq -e '.[] | test("yarn\\.lock$") | not' \
-      #       || (echo "Changes to yarn.lock files aren't allowed in PRs." && exit 1)
-      - name: debug
+      - name: Get file changes
+        uses: trilom/file-changes-action@ce38c8ce2459ca3c303415eec8cb0409857b4272
+        if: ${{ contains(fromJson('["admin", "write"]'), fromJson(steps.get_permissions.outputs.data).permission) }}
+      - name: Check for yarn.lock changes
+        if: ${{ contains(fromJson('["admin", "write"]'), fromJson(steps.get_permissions.outputs.data).permission) }}
         run: |
-          echo ${{ fromJson(steps.get_permissions.outputs.data).permission }}
+          cat $HOME/files.json | jq -e '.[] | test("yarn\\.lock$") | not' \
+            || (echo "Changes to yarn.lock files aren't allowed in PRs." && exit 1)
