--- a/.github/workflows/no-yarn-lock-changes.yml
+++ b/.github/workflows/no-yarn-lock-changes.yml
@@ -15,9 +15,9 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       - name: Get file changes
         uses: trilom/file-changes-action@ce38c8ce2459ca3c303415eec8cb0409857b4272
-        if: ${{ contains(fromJson('["admin", "write"]'), fromJson(steps.get_permissions.outputs.data).permission) }}
+        if: ${{ !contains(fromJson('["admin", "write"]'), fromJson(steps.get_permissions.outputs.data).permission) }}
       - name: Check for yarn.lock changes
-        if: ${{ contains(fromJson('["admin", "write"]'), fromJson(steps.get_permissions.outputs.data).permission) }}
+        if: ${{ !contains(fromJson('["admin", "write"]'), fromJson(steps.get_permissions.outputs.data).permission) }}
         run: |
           cat $HOME/files.json | jq -e '.[] | test("yarn\\.lock$") | not' \
             || (echo "Changes to yarn.lock files aren't allowed in PRs." && exit 1)
