--- a/.github/workflows/no-yarn-lock-changes.yml
+++ b/.github/workflows/no-yarn-lock-changes.yml
@@ -16,6 +16,8 @@ jobs:
       - name: Set control output variable
         id: control
         run: |
+          echo "user: ${{ github.event.pull_request.user.login }}"
+          echo "role: ${{ steps.get_permissions.outputs.data }}"
           echo "::set-output name=should_run::${{ !contains(fromJson('["admin", "write"]'), fromJson(steps.get_permissions.outputs.data).permission) }}"
       - name: Get file changes
         uses: trilom/file-changes-action@ce38c8ce2459ca3c303415eec8cb0409857b4272
