--- a/extensions/typescript-language-features/package.json
+++ b/extensions/typescript-language-features/package.json
@@ -10,7 +10,8 @@
   "aiKey": "AIF-d9b70cd4-b9f9-4d70-929b-a071c400b217",
   "enableProposedApi": true,
   "workspaceTrust": {
-    "required": "onDemand"
+    "request": "onDemand",
+    "description": ""
   },
   "engines": {
     "vscode": "^1.30.0"
