--- a/.github/workflows/no-yarn-lock-changes.yml
+++ b/.github/workflows/no-yarn-lock-changes.yml
@@ -17,8 +17,8 @@ jobs:
         id: control
         run: |
           echo "user: ${{ github.event.pull_request.user.login }}"
-          echo "role: ${{ steps.get_permissions.outputs.data }}"
-          echo "::set-output name=should_run::${{ !contains(fromJson('["admin", "write"]'), fromJson(steps.get_permissions.outputs.data).permission) }}"
+          echo "role: ${{ fromJson(steps.get_permissions.outputs.data).permission) }}"
+          echo "should_run: ${{ !contains(fromJson('["admin", "write"]'), fromJson(steps.get_permissions.outputs.data).permission) }}"
       - name: Get file changes
         uses: trilom/file-changes-action@ce38c8ce2459ca3c303415eec8cb0409857b4272
         if: ${{ steps.control.should_run }}
