--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -85,6 +85,5 @@
 		"editor.formatOnSave": true,
 	},
 	"typescript.tsc.autoDetect": "off",
-	"notebook.experimental.useMarkdownRenderer": true,
-	"testing.autoRun.mode": "onlyPreviouslyRun"
+	"notebook.experimental.useMarkdownRenderer": true
 }
