copy directly from master

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -83,5 +83,8 @@
 	"[javascript]": {
 		"editor.defaultFormatter": "vscode.typescript-language-features",
 		"editor.formatOnSave": true,
-	}
+	},
+	"typescript.tsc.autoDetect": "off",
+	"notebook.experimental.useMarkdownRenderer": true,
+	"testing.autoRun.mode": "onlyPreviouslyRun",
 }
