Revert "chore: bump electron@12.0.2"
This reverts commit 79a429d92d2ceaff4b1510cea43d03a7b91d42d9.

--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "compile-web": "node --max_old_space_size=4095 ./node_modules/gulp/bin/gulp.js compile-web",
     "watch-web": "node --max_old_space_size=4095 ./node_modules/gulp/bin/gulp.js watch-web",
     "eslint": "node build/eslint",
+    "electron-rebuild": "electron-rebuild --arch=arm64 --force --version=11.4.2",
     "playwright-install": "node build/azure-pipelines/common/installPlaywright.js",
     "compile-build": "node --max_old_space_size=4095 ./node_modules/gulp/bin/gulp.js compile-build",
     "compile-extensions-build": "node --max_old_space_size=4095 ./node_modules/gulp/bin/gulp.js compile-extensions-build",
@@ -81,7 +82,7 @@
     "vscode-proxy-agent": "^0.8.2",
     "vscode-regexpp": "^3.1.0",
     "vscode-ripgrep": "^1.11.1",
-    "vscode-sqlite3": "4.0.11",
+    "vscode-sqlite3": "4.0.10",
     "vscode-textmate": "5.2.0",
     "xterm": "4.12.0-beta.20",
     "xterm-addon-search": "0.9.0-beta.1",
@@ -104,7 +105,7 @@
     "@types/keytar": "^4.4.0",
     "@types/minimist": "^1.2.1",
     "@types/mocha": "^8.2.0",
-    "@types/node": "^14.14.37",
+    "@types/node": "^12.19.9",
     "@types/sinon": "^1.16.36",
     "@types/trusted-types": "^1.0.6",
     "@types/vscode-windows-registry": "^1.0.0",
@@ -126,7 +127,8 @@
     "cssnano": "^4.1.11",
     "debounce": "^1.0.0",
     "deemon": "^1.4.0",
-    "electron": "12.0.2",
+    "electron": "11.4.2",
+    "electron-rebuild": "2.0.3",
     "eslint": "6.8.0",
     "eslint-plugin-jsdoc": "^19.1.0",
     "event-stream": "3.3.4",
