--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -210,6 +210,17 @@
 			"group": "build",
 			"label": "npm: tsec-compile-check",
 			"detail": "node_modules/tsec/bin/tsec -p src/tsconfig.json --noEmit"
+		},
+		{
+			"type": "npm",
+			"script": "no-implicit-override-watch",
+			"problemMatcher": [
+				"$tsc-watch"
+			],
+			"group": "build",
+			"label": "npm: no-implicit-override-watch",
+			"detail": "tsc --watch -p src/tsconfig.json --noEmit --noImplicitOverride",
+			"isBackground": true
 		}
 	]
 }
