--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -215,7 +215,11 @@
 			"type": "npm",
 			"script": "no-implicit-override-watch",
 			"problemMatcher": [
-				"$tsc-watch"
+				{
+					"base": "$tsc-watch",
+					"applyTo": "allDocuments",
+					"owner": "tsc-no-imp"
+				}
 			],
 			"group": "build",
 			"label": "npm: no-implicit-override-watch",
