--- a/extensions/json-language-features/package.json
+++ b/extensions/json-language-features/package.json
@@ -17,7 +17,7 @@
   "main": "./client/out/node/jsonClientMain",
   "browser": "./client/dist/browser/jsonClientMain",
   "enableProposedApi": true,
-  "": { "request": "never" },
+  "workspaceTrust": { "request": "never" },
   "scripts": {
     "compile": "gulp compile-extension:json-language-features-client compile-extension:json-language-features-server",
     "watch": "gulp watch-extension:json-language-features-client watch-extension:json-language-features-server",
