--- a/package.json
+++ b/package.json
@@ -71,7 +71,7 @@
     "native-is-elevated": "0.4.3",
     "native-keymap": "2.2.1",
     "native-watchdog": "1.3.0",
-    "node-pty": "0.10.0-beta19",
+    "node-pty": "0.10.1",
     "nsfw": "2.1.2",
     "spdlog": "^0.11.1",
     "sudo-prompt": "9.2.1",
