--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -4,7 +4,7 @@
 		{
 			"type": "npm",
 			"script": "watch-clientd",
-			"label": "Build VS Code Core",
+			"label": "Core - Build",
 			"isBackground": true,
 			"presentation": {
 				"reveal": "never",
@@ -31,7 +31,7 @@
 		{
 			"type": "npm",
 			"script": "watch-extensionsd",
-			"label": "Build VS Code Extensions",
+			"label": "Ext - Build",
 			"isBackground": true,
 			"presentation": {
 				"reveal": "never",
@@ -56,10 +56,10 @@
 			}
 		},
 		{
-			"label": "Build VS Code",
+			"label": "VS Code - Build",
 			"dependsOn": [
-				"Build VS Code Core",
-				"Build VS Code Extensions"
+				"Core - Build",
+				"Ext - Build"
 			],
 			"group": {
 				"kind": "build",
@@ -70,7 +70,7 @@
 		{
 			"type": "npm",
 			"script": "kill-watch-clientd",
-			"label": "Kill Build VS Code Core",
+			"label": "Kill Core - Build",
 			"group": "build",
 			"presentation": {
 				"reveal": "never",
@@ -81,7 +81,7 @@
 		{
 			"type": "npm",
 			"script": "kill-watch-extensionsd",
-			"label": "Kill Build VS Code Extensions",
+			"label": "Kill Ext - Build",
 			"group": "build",
 			"presentation": {
 				"reveal": "never",
@@ -90,10 +90,10 @@
 			"problemMatcher": "$tsc"
 		},
 		{
-			"label": "Kill Build VS Code",
+			"label": "Kill VS Code - Build",
 			"dependsOn": [
-				"Kill Build VS Code Core",
-				"Kill Build VS Code Extensions"
+				"Kill Core - Build",
+				"Kill Ext - Build"
 			],
 			"group": "build",
 			"problemMatcher": []
@@ -101,7 +101,7 @@
 		{
 			"type": "npm",
 			"script": "watch-webd",
-			"label": "Build Web Extensions",
+			"label": "Web Ext - Build",
 			"group": "build",
 			"isBackground": true,
 			"presentation": {
@@ -128,7 +128,7 @@
 		{
 			"type": "npm",
 			"script": "kill-watch-webd",
-			"label": "Kill Build Web Extensions",
+			"label": "Kill Web Ext - Build",
 			"group": "build",
 			"presentation": {
 				"reveal": "never"
